feat(api): don't include taxon attributes: type_taxt, type_taxon_id, headline_notes_taxt
