# public/api/v1/swagger.yaml
@@ -672,14 +672,8 @@ definitions:
             description: Populated only if this is a homonym that has been superseded by another taxa.
           incertae_sedis_in:
             type: string
-          type_taxt:
-            type: string
-          headline_notes_taxt:
-            type: string
           hong:
             type: boolean
-          type_taxon_id:
-            type: integer
           name_cache:
             type: string
             description: de-normalized cache of the name object
